CPL/Tema1/src/LCPLTreeBuilderParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 src/LCPLTreeBuilder.g 2013-11-12 22:45:04

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class LCPLTreeBuilderParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROGRAM", "ATTRIBUTE_ARRAY", "CLASSDEFINITION", "CONSTANT_INT", "FORMAL_PARAM", "CONSTANT_STRING", "SYMBOL", "EQ_COMP", "DECL_SECTION", "UNARY_MINUS", "PAR_EXPR", "BLOCK", "OBJ", "EXPR", "EMPTY_DISPATCH", "LOCAL_DECL", "DISPATCH", "DISPATCH_ARGUMENTS", "DECLARATION_SECTION", "EMPTY_METHOD", "ARRAY_TYPE", "DISPATCH_ARGS", "MEMBER", "MEMBERS", "ATTRIBUTE", "ASSIGNMENT", "ATTR", "EXPRESSION", "TYPE", "INT", "STRING", "CLASS", "INHERITS", "NEW", "METHOD", "STATEMENT", "END", "NULL", "LOCAL", "DISPATCH_S", "ID", "VOID_CONSTANT", "CAST", "STRING_CONST", "IF", "WHILE", "SELF", "SUBSTR", "ARRAY", "UNARY_BRACKET", "EQ", "EQUAL", "LTEQ", "LT", "PLUS", "SUB", "STAR", "DIV", "NOT", "INTEGER", "STRING_LITERAL", "ESCAPE_SEQUENCE", "LINE_COMMENT", "WS", "';'", "':'", "'->'", "','", "'['", "'.'", "']'", "'self.'", "'var'", "'[]'", "'then'", "'else'", "'loop'", "'{'", "'}'", "'('", "')'"
    };
    public static final int CAST=46;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int CLASSDEFINITION=6;
    public static final int LT=57;
    public static final int CLASS=35;
    public static final int STAR=60;
    public static final int MEMBER=26;
    public static final int DISPATCH_ARGUMENTS=21;
    public static final int WHILE=49;
    public static final int DISPATCH=20;
    public static final int LTEQ=56;
    public static final int ATTRIBUTE=28;
    public static final int NEW=37;
    public static final int ARRAY_TYPE=24;
    public static final int SUB=59;
    public static final int NOT=62;
    public static final int VOID_CONSTANT=45;
    public static final int ID=44;
    public static final int EOF=-1;
    public static final int STATEMENT=39;
    public static final int IF=48;
    public static final int TYPE=32;
    public static final int ESCAPE_SEQUENCE=65;
    public static final int STRING_LITERAL=64;
    public static final int EXPR=17;
    public static final int DISPATCH_ARGS=25;
    public static final int INHERITS=36;
    public static final int SUBSTR=51;
    public static final int ATTRIBUTE_ARRAY=5;
    public static final int OBJ=16;
    public static final int LOCAL_DECL=19;
    public static final int EMPTY_METHOD=23;
    public static final int STRING_CONST=47;
    public static final int EQUAL=55;
    public static final int PLUS=58;
    public static final int DISPATCH_S=43;
    public static final int EQ=54;
    public static final int EXPRESSION=31;
    public static final int ARRAY=52;
    public static final int ATTR=30;
    public static final int INTEGER=63;
    public static final int CONSTANT_INT=7;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int SYMBOL=10;
    public static final int LINE_COMMENT=66;
    public static final int NULL=41;
    public static final int MEMBERS=27;
    public static final int UNARY_MINUS=13;
    public static final int INT=33;
    public static final int DECL_SECTION=12;
    public static final int LOCAL=42;
    public static final int T__84=84;
    public static final int PAR_EXPR=14;
    public static final int EQ_COMP=11;
    public static final int FORMAL_PARAM=8;
    public static final int WS=67;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__70=70;
    public static final int DECLARATION_SECTION=22;
    public static final int BLOCK=15;
    public static final int CONSTANT_STRING=9;
    public static final int PROGRAM=4;
    public static final int ASSIGNMENT=29;
    public static final int DIV=61;
    public static final int END=40;
    public static final int T__76=76;
    public static final int T__75=75;
    public static final int SELF=50;
    public static final int T__74=74;
    public static final int METHOD=38;
    public static final int T__73=73;
    public static final int EMPTY_DISPATCH=18;
    public static final int UNARY_BRACKET=53;
    public static final int T__79=79;
    public static final int STRING=34;
    public static final int T__78=78;
    public static final int T__77=77;

    // delegates
    // delegators


        public LCPLTreeBuilderParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public LCPLTreeBuilderParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return LCPLTreeBuilderParser.tokenNames; }
    public String getGrammarFileName() { return "src/LCPLTreeBuilder.g"; }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // src/LCPLTreeBuilder.g:63:1: program : ( ( class_definition )+ ) -> ^( PROGRAM ( class_definition )+ ) ;
    public final LCPLTreeBuilderParser.program_return program() throws RecognitionException {
        LCPLTreeBuilderParser.program_return retval = new LCPLTreeBuilderParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        LCPLTreeBuilderParser.class_definition_return class_definition1 = null;


        RewriteRuleSubtreeStream stream_class_definition=new RewriteRuleSubtreeStream(adaptor,"rule class_definition");
        try {
            // src/LCPLTreeBuilder.g:63:9: ( ( ( class_definition )+ ) -> ^( PROGRAM ( class_definition )+ ) )
            // src/LCPLTreeBuilder.g:63:13: ( ( class_definition )+ )
            {
            // src/LCPLTreeBuilder.g:63:13: ( ( class_definition )+ )
            // src/LCPLTreeBuilder.g:63:14: ( class_definition )+
            {
            // src/LCPLTreeBuilder.g:63:14: ( class_definition )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==CLASS) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src/LCPLTreeBuilder.g:63:14: class_definition
            	    {
            	    pushFollow(FOLLOW_class_definition_in_program461);
            	    class_definition1=class_definition();

            	    state._fsp--;

            	    stream_class_definition.add(class_definition1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }



            // AST REWRITE
            // elements: class_definition
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 63:33: -> ^( PROGRAM ( class_definition )+ )
            {
                // src/LCPLTreeBuilder.g:63:36: ^( PROGRAM ( class_definition )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROGRAM, "PROGRAM"), root_1);

                if ( !(stream_class_definition.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_class_definition.hasNext() ) {
                    adaptor.addChild(root_1, stream_class_definition.nextTree());

                }
                stream_class_definition.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class class_definition_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "class_definition"
    // src/LCPLTreeBuilder.g:66:1: class_definition : classdef -> ^( CLASSDEFINITION classdef ) ;
    public final LCPLTreeBuilderParser.class_definition_return class_definition() throws RecognitionException {
        LCPLTreeBuilderParser.class_definition_return retval = new LCPLTreeBuilderParser.class_definition_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        LCPLTreeBuilderParser.classdef_return classdef2 = null;


        RewriteRuleSubtreeStream stream_classdef=new RewriteRuleSubtreeStream(adaptor,"rule classdef");
        try {
            // src/LCPLTreeBuilder.g:67:2: ( classdef -> ^( CLASSDEFINITION classdef ) )
            // src/LCPLTreeBuilder.g:67:4: classdef
            {
            pushFollow(FOLLOW_classdef_in_class_definition483);
            classdef2=classdef();

            state._fsp--;

            stream_classdef.add(classdef2.getTree());


            // AST REWRITE
            // elements: classdef
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 67:14: -> ^( CLASSDEFINITION classdef )
            {
                // src/LCPLTreeBuilder.g:67:17: ^( CLASSDEFINITION classdef )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CLASSDEFINITION, "CLASSDEFINITION"), root_1);

                adaptor.addChild(root_1, stream_classdef.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "class_definition"

    public static class classdef_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "classdef"
    // src/LCPLTreeBuilder.g:70:1: classdef : ( CLASS name= ID INHERITS parent= ID ( members )? END ';' -> ^( CLASS $name $parent ( members )? ) | CLASS name= ID ( members )? END ';' -> ^( CLASS $name ( members )? ) );
    public final LCPLTreeBuilderParser.classdef_return classdef() throws RecognitionException {
        LCPLTreeBuilderParser.classdef_return retval = new LCPLTreeBuilderParser.classdef_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token name=null;
        Token parent=null;
        Token CLASS3=null;
        Token INHERITS4=null;
        Token END6=null;
        Token char_literal7=null;
        Token CLASS8=null;
        Token END10=null;
        Token char_literal11=null;
        LCPLTreeBuilderParser.members_return members5 = null;

        LCPLTreeBuilderParser.members_return members9 = null;


        CommonTree name_tree=null;
        CommonTree parent_tree=null;
        CommonTree CLASS3_tree=null;
        CommonTree INHERITS4_tree=null;
        CommonTree END6_tree=null;
        CommonTree char_literal7_tree=null;
        CommonTree CLASS8_tree=null;
        CommonTree END10_tree=null;
        CommonTree char_literal11_tree=null;
        RewriteRuleTokenStream stream_CLASS=new RewriteRuleTokenStream(adaptor,"token CLASS");
        RewriteRuleTokenStream stream_68=new RewriteRuleTokenStream(adaptor,"token 68");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_INHERITS=new RewriteRuleTokenStream(adaptor,"token INHERITS");
        RewriteRuleTokenStream stream_END=new RewriteRuleTokenStream(adaptor,"token END");
        RewriteRuleSubtreeStream stream_members=new RewriteRuleSubtreeStream(adaptor,"rule members");
        try {
            // src/LCPLTreeBuilder.g:70:10: ( CLASS name= ID INHERITS parent= ID ( members )? END ';' -> ^( CLASS $name $parent ( members )? ) | CLASS name= ID ( members )? END ';' -> ^( CLASS $name ( members )? ) )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==CLASS) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==ID) ) {
                    int LA4_2 = input.LA(3);

                    if ( (LA4_2==INHERITS) ) {
                        alt4=1;
                    }
                    else if ( (LA4_2==END||LA4_2==ID||LA4_2==76) ) {
                        alt4=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // src/LCPLTreeBuilder.g:70:13: CLASS name= ID INHERITS parent= ID ( members )? END ';'
                    {
                    CLASS3=(Token)match(input,CLASS,FOLLOW_CLASS_in_classdef503);  
                    stream_CLASS.add(CLASS3);

                    name=(Token)match(input,ID,FOLLOW_ID_in_classdef507);  
                    stream_ID.add(name);

                    INHERITS4=(Token)match(input,INHERITS,FOLLOW_INHERITS_in_classdef509);  
                    stream_INHERITS.add(INHERITS4);

                    parent=(Token)match(input,ID,FOLLOW_ID_in_classdef513);  
                    stream_ID.add(parent);

                    // src/LCPLTreeBuilder.g:70:46: ( members )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==ID||LA2_0==76) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // src/LCPLTreeBuilder.g:70:46: members
                            {
                            pushFollow(FOLLOW_members_in_classdef515);
                            members5=members();

                            state._fsp--;

                            stream_members.add(members5.getTree());

                            }
                            break;

                    }

                    END6=(Token)match(input,END,FOLLOW_END_in_classdef518);  
                    stream_END.add(END6);

                    char_literal7=(Token)match(input,68,FOLLOW_68_in_classdef520);  
                    stream_68.add(char_literal7);



                    // AST REWRITE
                    // elements: CLASS, members, parent, name
                    // token labels: name, parent
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleTokenStream stream_name=new RewriteRuleTokenStream(adaptor,"token name",name);
                    RewriteRuleTokenStream stream_parent=new RewriteRuleTokenStream(adaptor,"token parent",parent);
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 70:63: -> ^( CLASS $name $parent ( members )? )
                    {
                        // src/LCPLTreeBuilder.g:70:66: ^( CLASS $name $parent ( members )? )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(stream_CLASS.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_name.nextNode());
                        adaptor.addChild(root_1, stream_parent.nextNode());
                        // src/LCPLTreeBuilder.g:70:88: ( members )?
                        if ( stream_members.hasNext() ) {
                            adaptor.addChild(root_1, stream_members.nextTree());

                        }
                        stream_members.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // src/LCPLTreeBuilder.g:71:13: CLASS name= ID ( members )? END ';'
                    {
                    CLASS8=(Token)match(input,CLASS,FOLLOW_CLASS_in_classdef549);  
                    stream_CLASS.add(CLASS8);

                    name=(Token)match(input,ID,FOLLOW_ID_in_classdef553);  
                    stream_ID.add(name);

                    // src/LCPLTreeBuilder.g:71:27: ( members )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==ID||LA3_0==76) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // src/LCPLTreeBuilder.g:71:27: members
                            {
                            pushFollow(FOLLOW_members_in_classdef555);
                            members9=members();

                            state._fsp--;

                            stream_members.add(members9.getTree());

                            }
                            break;

                    }

                    END10=(Token)match(input,END,FOLLOW_END_in_classdef558);  
                    stream_END.add(END10);

                    char_literal11=(Token)match(input,68,FOLLOW_68_in_classdef560);  
                    stream_68.add(char_literal11);



                    // AST REWRITE
                    // elements: CLASS, members, name
                    // token labels: name
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleTokenStream stream_name=new RewriteRuleTokenStream(adaptor,"token name",name);
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 71:44: -> ^( CLASS $name ( members )? )
                    {
                        // src/LCPLTreeBuilder.g:71:47: ^( CLASS $name ( members )? )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(stream_CLASS.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_name.nextNode());
                        // src/LCPLTreeBuilder.g:71:61: ( members )?
                        if ( stream_members.hasNext() ) {
                            adaptor.addChild(root_1, stream_members.nextTree());

                        }
                        stream_members.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "classdef"

    public static class method_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "method"
    // src/LCPLTreeBuilder.g:74:1: method : ( ID ':' END ';' -> ^( EMPTY_METHOD ID ) | ID ':' block END ';' -> ^( METHOD ID block ) | ID '->' type ':' block END ';' -> ^( METHOD ID type block ) | ID (f+= formal_param ) ( ',' f+= formal_param )* ( '->' type )? ':' block END ';' -> ^( METHOD ID ( $f)+ ( type )? block ) );
    public final LCPLTreeBuilderParser.method_return method() throws RecognitionException {
        LCPLTreeBuilderParser.method_return retval = new LCPLTreeBuilderParser.method_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID12=null;
        Token char_literal13=null;
        Token END14=null;
        Token char_literal15=null;
        Token ID16=null;
        Token char_literal17=null;
        Token END19=null;
        Token char_literal20=null;
        Token ID21=null;
        Token string_literal22=null;
        Token char_literal24=null;
        Token END26=null;
        Token char_literal27=null;
        Token ID28=null;
        Token char_literal29=null;
        Token string_literal30=null;
        Token char_literal32=null;
        Token END34=null;
        Token char_literal35=null;
        List list_f=null;
        LCPLTreeBuilderParser.block_return block18 = null;

        LCPLTreeBuilderParser.type_return type23 = null;

        LCPLTreeBuilderParser.block_return block25 = null;

        LCPLTreeBuilderParser.type_return type31 = null;

        LCPLTreeBuilderParser.block_return block33 = null;

        RuleReturnScope f = null;
        CommonTree ID12_tree=null;
        CommonTree char_literal13_tree=null;
        CommonTree END14_tree=null;
        CommonTree char_literal15_tree=null;
        CommonTree ID16_tree=null;
        CommonTree char_literal17_tree=null;
        CommonTree END19_tree=null;
        CommonTree char_literal20_tree=null;
        CommonTree ID21_tree=null;
        CommonTree string_literal22_tree=null;
        CommonTree char_literal24_tree=null;
        CommonTree END26_tree=null;
        CommonTree char_literal27_tree=null;
        CommonTree ID28_tree=null;
        CommonTree char_literal29_tree=null;
        CommonTree string_literal30_tree=null;
        CommonTree char_literal32_tree=null;
        CommonTree END34_tree=null;
        CommonTree char_literal35_tree=null;
        RewriteRuleTokenStream stream_69=new RewriteRuleTokenStream(adaptor,"token 69");
        RewriteRuleTokenStream stream_68=new RewriteRuleTokenStream(adaptor,"token 68");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_END=new RewriteRuleTokenStream(adaptor,"token END");
        RewriteRuleTokenStream stream_70=new RewriteRuleTokenStream(adaptor,"token 70");
        RewriteRuleTokenStream stream_71=new RewriteRuleTokenStream(adaptor,"token 71");
        RewriteRuleSubtreeStream stream_formal_param=new RewriteRuleSubtreeStream(adaptor,"rule formal_param");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // src/LCPLTreeBuilder.g:74:9: ( ID ':' END ';' -> ^( EMPTY_METHOD ID ) | ID ':' block END ';' -> ^( METHOD ID block ) | ID '->' type ':' block END ';' -> ^( METHOD ID type block ) | ID (f+= formal_param ) ( ',' f+= formal_param )* ( '->' type )? ':' block END ';' -> ^( METHOD ID ( $f)+ ( type )? block ) )
            int alt7=4;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==ID) ) {
                switch ( input.LA(2) ) {
                case 69:
                    {
                    int LA7_2 = input.LA(3);

                    if ( (LA7_2==END) ) {
                        alt7=1;
                    }
                    else if ( ((LA7_2>=INT && LA7_2<=STRING)||LA7_2==NEW||LA7_2==LOCAL||(LA7_2>=ID && LA7_2<=VOID_CONSTANT)||(LA7_2>=IF && LA7_2<=SELF)||LA7_2==SUB||(LA7_2>=NOT && LA7_2<=STRING_LITERAL)||LA7_2==72||LA7_2==75||LA7_2==81||LA7_2==83) ) {
                        alt7=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 7, 2, input);

                        throw nvae;
                    }
                    }
                    break;
                case 70:
                    {
                    alt7=3;
                    }
                    break;
                case INT:
                case STRING:
                case ID:
                    {
                    alt7=4;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }

            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // src/LCPLTreeBuilder.g:74:11: ID ':' END ';'
                    {
                    ID12=(Token)match(input,ID,FOLLOW_ID_in_method590);  
                    stream_ID.add(ID12);

                    char_literal13=(Token)match(input,69,FOLLOW_69_in_method592);  
                    stream_69.add(char_literal13);

                    END14=(Token)match(input,END,FOLLOW_END_in_method594);  
                    stream_END.add(END14);

                    char_literal15=(Token)match(input,68,FOLLOW_68_in_method596);  
                    stream_68.add(char_literal15);



                    // AST REWRITE
                    // elements: ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 74:26: -> ^( EMPTY_METHOD ID )
                    {
                        // src/LCPLTreeBuilder.g:74:29: ^( EMPTY_METHOD ID )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(EMPTY_METHOD, "EMPTY_METHOD"), root_1);

                        adaptor.addChild(root_1, stream_ID.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // src/LCPLTreeBuilder.g:75:4: ID ':' block END ';'
                    {
                    ID16=(Token)match(input,ID,FOLLOW_ID_in_method609);  
                    stream_ID.add(ID16);

                    char_literal17=(Token)match(input,69,FOLLOW_69_in_method611);  
                    stream_69.add(char_literal17);

                    pushFollow(FOLLOW_block_in_method613);
                    block18=block();

                    state._fsp--;

                    stream_block.add(block18.getTree());
                    END19=(Token)match(input,END,FOLLOW_END_in_method615);  
                    stream_END.add(END19);

                    char_literal20=(Token)match(input,68,FOLLOW_68_in_method617);  
                    stream_68.add(char_literal20);



                    // AST REWRITE
                    // elements: block, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 75:25: -> ^( METHOD ID block )
                    {
                        // src/LCPLTreeBuilder.g:75:28: ^( METHOD ID block )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(METHOD, "METHOD"), root_1);

                        adaptor.addChild(root_1, stream_ID.nextNode());
                        adaptor.addChild(root_1, stream_block.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }
